@@ -168,13 +168,20 @@ void VCClockProperties::slotTypeSelectChanged()
         m_resetInputWidget->hide();
         m_playInputWidget->hide();
         m_noControlLabel->show();
+        m_scheduleTree->showColumn(1);
     }
     else
     {
         m_resetInputWidget->show();
         m_playInputWidget->show();
         m_noControlLabel->hide();
+        m_scheduleTree->hideColumn(1);
     }
+
+    if (m_stopWatchRadio->isChecked())
+        m_scheduleGroup->hide();
+    else
+        m_scheduleGroup->show();
 }
 
 void VCClockProperties::slotAddSchedule()
